# Aegis

./: .gitignore  CMakeLists.txt  README.md  installer.iss
src/: auth_manager.cpp  auth_manager.hpp  clipboard.cpp  clipboard.hpp  command_router.cpp  command_router.hpp  crypto_service.cpp  crypto_service.hpp  entry.cpp  entry.hpp  main.cpp  password_manager.cpp  password_manager.hpp  storage.cpp  storage.hpp  ui.cpp  ui.hpp  version.rc
tests/: test_main.cpp
